# Mailger

./: .gitignore  README.md  app.json  bun.lockb  forge.config.js  package-lock.json  package.json
.github/workflows/: build.yml  main.yml
android/: settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mailger/: MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Mailger/: AppDelegate.m  Info.plist
ios/Mailger.xcodeproj/: project.pbxproj
ios/Mailger.xcodeproj/xcshareddata/xcschemes/: Mailger-tvOS.xcscheme  Mailger.xcscheme
ios/Mailger/Base.lproj/: LaunchScreen.xib
ios/MailgerTests/: MailgerTests.m
src/: App.vue  imapClient.js  index.html  index.js  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: imap.rs  main.rs  smtp.rs
src/background/: mails.js
src/handle/: fetch-mails.js  mail-parser.js
src/libs/: database.js  imap.js  imapClient.js
src/pages/: login.html  main.html  preload.js  welcome.html
src/pages-handler/: login.js  main.js  welcome.js
src/utils/: auth.js  logger.js  notification.js  pageHandler.js  redirect.js
