[package]
name = "mailger"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = "0.10.0-rc.3"  # Для SMTP
async-imap = "3.1"  # Для IMAP
tokio = { version = "1", features = ["full"] }  # Для асинхронных операций
tokio-native-tls = "0.3"  # Для TLS


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
